--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -65,6 +65,31 @@
   publisher={Springer}
 }
 
+@inproceedings{2017_khomenko_waitx,
+  title={{WAITX: An Arbiter for Non-Persistent Signals}},
+  author={Khomenko, V. and Sokolov, D. and Mokhov, A. and Yakovlev, A.},
+  booktitle={IEEE International Symposium on Asynchronous Circuits and Systems (ASYNC), 2017},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{2015_mokhov_om,
+  title={Opportunistic Merge Element},
+  author={Mokhov, A. and Khomenko, V. and Sokolov, D. and Yakovlev, A.},
+  booktitle={IEEE International Symposium on Asynchronous Circuits and Systems (ASYNC), 2015},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{1999_greenstreet_merge,
+  title={Real-time merging},
+  author={Greenstreet, M.},
+  booktitle={Proceedings of International Symposium on Advanced Research in Asynchronous Circuits and Systems (ASYNC)},
+  pages={186--198},
+  year={1999},
+  organization={IEEE}
+}
+
 @article{2014_algebra_mokhov,
   title={Algebra of Parameterised Graphs},
   author={Mokhov, A. and Khomenko, V.},
