--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -9,18 +9,15 @@
 @inproceedings{2017_jiang_noc,
   title={{An asynchronous NoC router in a 14nm FinFET library: Comparison to an industrial synchronous counterpart}},
   author={Jiang, W. and Bertozzi, D. and Miorandi, G. and Nowick, S. and Burleson, W. and Sadowski, G.},
-  booktitle={2017 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
-  pages={732--733},
-  year={2017},
-  organization={IEEE}
+  booktitle={Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  year={2017}
 }
 
 @inproceedings{2017_sokolov_a4a,
   title={Benefits of Asynchronous Control for Analog Electronics: Multiphase Buck Case Study},
   author={Sokolov, D. and Dubikhin, V. and Khomenko, V. and Lloyd, D. and Mokhov, A. and Yakovlev, A.},
   booktitle={Design, Automation \& Test in Europe Conference (DATE)},
-  year={2017},
-  organization={IEEE}
+  year={2017}
 }
 
 @Misc{Workcraft_website,
