--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -52,7 +52,7 @@
 }
 
 @article{1996_yakovlev_or,
-  title={On the models for asynchronous circuit behaviour with OR causality},
+  title={On the models for asynchronous circuit behaviour with {OR} causality},
   author={Yakovlev, A. and Kishinevsky, M. and Kondratyev, A. and Lavagno, L. and Pietkiewicz-Koutny, M.},
   journal={Formal Methods in System Design},
   volume={9},
