Rename to ngcas-17

--- a/doc/ngcas-17.tex
+++ b/doc/ngcas-17.tex
@@ -344,6 +344,6 @@ This research was supported by EPSRC grant EP/L025507/1 ``A4A: Asynchronous desi
 for Analogue electronics''.
 
 \bibliographystyle{unsrt}
-\bibliography{publications}
+\bibliography{refs}
 
 \end{document}
